care-australia-uat/force-app/main/default/objects/Finance_Debit_AC_Mapping__mdt/Finance_Debit_AC_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Finance Debit AC Mapping</label>
    <pluralLabel>Finance Debit AC Mappings</pluralLabel>
</CustomObject>