care-australia-uat/force-app/main/default/objects/Finance_Debit_AC_Mapping__mdt/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
                <default>true</default>
                <label>Visa</label>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Diners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>