care-australia-uat/force-app/main/default/objects/Finance_Debit_AC_Mapping__mdt/fields/Donation_Source__c.field-meta.xml
<CustomField>
    <fullName>Donation_Source__c</fullName>
    <label>Donation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Community Fundraising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>