care-australia-uat/force-app/main/default/objects/Finance_Debit_AC_Mapping__mdt/fields/Merchant_Category__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Category__c</fullName>
    <label>Merchant Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>EverydayHero</fullName>
            </value>
            <value>
                <fullName>GiveEasy</fullName>
            </value>
            <value>
                <fullName>Cardly</fullName>
            </value>
            <value>
                <fullName>Good2Give</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Bambora</fullName>
            </value>
            <value>
                <fullName>Benevity</fullName>
            </value>
            <value>
                <fullName>General Community Fundraising</fullName>
            </value>
            <value>
                <fullName>GoFundraise</fullName>
            </value>
            <value>
                <fullName>Good Company</fullName>
            </value>
            <value>
                <fullName>Grassrootz</fullName>
            </value>
            <value>
                <fullName>MyCause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>