care-australia-uat/force-app/main/default/objects/Finance_Debit_AC_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Donation_Source__c</columns>
    <columns>Merchant_Category__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Card_Type__c</columns>
    <columns>AC_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>